# social-payments-account-registry

./: .copier-answers.yml  Dockerfile  README.md  main.py  tox.ini
.github/workflows/: docker-build.yml  openapi-push.yml  publish.yml
db_scripts/: README.md  deploy.sh
db_scripts/0.1.0/ddl/: 01.types.sql  02.tables.sql  03.sequences.sql  04.defaults.sql  05.constraints.sql  06.index.sql
db_scripts/0.1.0/dml/: 01.data.sql
scripts/: README.md  link_mapper.py  sample_data.csv  seed_mapper.py  update_mapper.py
social-payments-account-registry/: pyproject.toml
social-payments-account-registry/src/social_payments_account_registry/: app.py  config.py
social-payments-account-registry/src/social_payments_account_registry/controllers/: dfsp_controller.py  self_service_controller.py
social-payments-account-registry/src/social_payments_account_registry/models/: dfsp.py  key_value.py  selfservice.py
social-payments-account-registry/src/social_payments_account_registry/models/orm/: dfsp_levels.py  fa_construct_strategy.py  provider.py
social-payments-account-registry/src/social_payments_account_registry/services/: construct_service.py  id_mapper_service.py
spar-account-mapper-g2p-connect/: pyproject.toml
spar-connector-g2pconnect/: README.md  pyproject.toml
spar-connector-g2pconnect/src/spar_connector_g2pconnect/: config.py
spar-connector-g2pconnect/src/spar_connector_g2pconnect/services/: g2p_connect_id_mapper.py
spar-g2pconnect-id-mapper/: Dockerfile  README.md  main.py  pyproject.toml
spar-g2pconnect-id-mapper/src/spar_g2pconnect_id_mapper/: app.py  config.py
spar-g2pconnect-id-mapper/src/spar_g2pconnect_id_mapper/controllers/: mapper_controller.py  mapper_sync_controller.py
spar-g2pconnect-id-mapper/src/spar_g2pconnect_id_mapper/models/orm/: id_fa_mapping.py
spar-g2pconnect-id-mapper/src/spar_g2pconnect_id_mapper/services/: mapper_service.py
spar-mapper-g2p-connect/: README.md  pyproject.toml
spar-mapper-g2p-connect/src/spar_mapper_g2p_connect/: app.py  config.py
spar-mapper-g2p-connect/src/spar_mapper_g2p_connect/services/: g2p_connect_id_mapper.py
spar-mojaloop-als-oracle/: README.md  pyproject.toml
spar-mojaloop-als-oracle/src/spar_mojaloop_als_oracle/: app.py  config.py  errors.py  exception.py
spar-mojaloop-als-oracle/src/spar_mojaloop_als_oracle/controllers/: als_oracle.py
spar-mojaloop-als-oracle/src/spar_mojaloop_als_oracle/models/: error.py  participant.py
spar-mojaloop-als-oracle/src/spar_mojaloop_als_oracle/services/: als_oracle_service.py
