[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spar-g2pconnect-id-mapper"
authors = [
  { name="OpenG2P", email="info@openg2p.org" },
]
description = "SPAR G2P Connect ID Mapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
]
dependencies = [
  "openg2p-fastapi-common",
  "openg2p-common-g2pconnect-id-mapper",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://openg2p.org"
Documentation = "https://docs.openg2p.org/"
Repository = "https://github.com/OpenG2P/social-payments-account-registry"
Source = "https://github.com/OpenG2P/social-payments-account-registry"

[tool.hatch.version]
path = "src/spar_g2pconnect_id_mapper/__init__.py"
